# site_scout_project

./: .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  Makefile  README.md  cli.py  coverage.xml  interactive_cli.py  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: default.yaml
site_scout/: __init__.py  aggregator.py  cli.py  config.py  doc_finder.py  engine.py  interactive_cli.py  localization.py  logger.py  scanner.py  utils.py
site_scout.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
site_scout/bruteforce/: __init__.py  brute_force.py
site_scout/crawler/: crawler.py  fetcher.py  link_extractor.py  models.py  robots.py
site_scout/data/: default.yaml
site_scout/parser/: html_parser.py  robots_parser.py  sitemap_parser.py
site_scout/report/: __init__.py  html_report.py  json_report.py
tests/: conftest.py  test_cli.py  test_config.py  test_crawler.py
