# === FILE: site_scout_project/pyproject.toml ===
[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "site-scout"
version = "1.0.0"
description = "Asynchronous website scanner"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "FastWay Logistics R&D", email = "dev@fastway.example" }
]

# Core runtime dependencies
dependencies = [
  "aiohttp>=3.9",
  "beautifulsoup4>=4.12",
  "click>=8.1",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "lxml>=5.2 ; platform_system != 'Windows'",  # optional speed‑up
]

[project.optional-dependencies]
# Development / CI tooling
dev = [
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "black>=24.4",
  "mypy>=1.9",
  "pre-commit>=3.7",
]

[project.scripts]
site-scout = "site_scout.cli:cli"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
extend-ignore = ["E501"]
