# File: pyproject.toml

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "site-scout"
version = "1.0.0"
description = "Async website scanner"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FastWay R&D", email = "dev@fastway.example" }]

dependencies = [
  "aiohttp>=3.9",
  "beautifulsoup4>=4.12",
  "click>=8.1",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "lxml>=5.2 ; platform_system!='Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1", "pytest-asyncio>=0.23", "ruff>=0.4",
  "black>=24.4", "mypy>=1.9", "pre-commit>=3.7",
  "isort", "flake8", "pydocstyle", "bandit", "radon",
]

[project.scripts]
site-scout = "site_scout.cli:cli"

[tool.setuptools.packages.find]
exclude = ["configs"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104"]

[tool.bandit]
skips = ["B101"]
recursive = true

[tool.radon]
# default settings
